# gallade

./: .gitignore  Cargo.toml  Makefile  README.md  pom.xml
src/: build.rs  classpath.rs  coordinates.rs  download.rs  init.rs  lockfile.rs  main.rs  manifest.rs  projects.rs  prune.rs  repository.rs  resolver.rs  run.rs  version.rs
src/templates/java/: App.java
