[package]
name = "gallade"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26" , features = ["derive"]}
quick-xml = { version = "0.37.2" , features = ["serialize"] }
reqwest = { version = "0.12.12" , features = ["json"] }
serde = { version = "1.0.217" , features = ["derive"] }
tokio = {  version = "1.43.0", features = ["full"] }
log = "0.4.25"
urlencoding = "2.1.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.135"
tempfile = "3.15.0"
tokio-test = "0.4.4"
semver = "1.0.24"
async-trait = "0.1.85"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
toml = "0.8.19"
walkdir = "2.5.0"
zip = "2.2.2"

